--- a/my-app/src/styles/main.css
+++ b/my-app/src/styles/main.css
@@ -577,7 +577,7 @@ body {
 }
 /*media queries*/
 .pro {
-  width: 30vw;
+  width: 15rem;
   height: 150vh;
   gap: 35px;
   display: flex;
@@ -587,8 +587,8 @@ body {
 }
 
 .pro2 {
-  margin-top: 2vh;
-  width: 30vw;
+  margin-top: -3rem;
+  width: 20%;
   height: 150vh;
   gap: 30px;
   display: flex;
@@ -729,6 +729,17 @@ body {
   animation-duration: 1.5s;
 }
 
+.foot2 {
+  color: #fff;
+  background-color: #1d1d1d;
+  font-family: "Poppins";
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 5rem;
+}
+
 @keyframes fade {
   from {
     opacity: 0.4;
@@ -826,7 +837,7 @@ body {
 }
 
 .card1 > img {
-  width: 30vw;
+  width: 100%;
   border-radius: 17px;
 }
 
@@ -859,12 +870,17 @@ body {
 }
 
 .projectLink {
-  margin-left: 10vw;
+  margin-left: 2.5vw;
   font-family: "Poppins";
   color: #fff;
   font-size: 1.3rem;
 }
 
+@media (max-width: 768px) {
+  .projectLink {
+    margin-left: 5vw;
+  }
+}
 .form {
   height: 60vh;
   display: flex;
@@ -954,7 +970,7 @@ body {
 
 @media (max-width: 768px) {
   .links {
-    display: flex;
+    display: none;
     width: 100%;
     position: absolute;
     position: fixed;
@@ -1017,9 +1033,9 @@ body {
   .pro2 {
     gap: 10rem;
     width: 15rem;
-    margin-top: 140rem;
+    margin-top: 122rem;
     margin-bottom: 2rem;
-    margin-left: -23rem;
+    margin-left: -24rem;
   }
   .card1 > img {
     width: 15rem;
@@ -1035,14 +1051,23 @@ body {
     height: 1rem;
     align-items: center;
   }
-  .foot {
-    margin-top: 80rem;
+  .foot2 {
+    text-align: center;
+    color: #fff;
+    background-color: #1d1d1d;
+    font-family: "Poppins";
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 5rem;
+    margin-top: 72rem;
   }
   .pro {
     margin-right: 3rem;
-    gap: 7rem;
+    gap: 3rem;
     width: 15rem;
-    margin-top: 70rem;
+    margin-top: 60rem;
   }
 }
 @media (max-width: 768px) {
@@ -1063,7 +1088,7 @@ body {
   }
   .name {
     height: 1.5rem;
-    margin-right: 2rem;
+    margin-right: 2.2rem;
     width: 10rem;
   }
   .textC p {
